--- a/getting-started/setup-and-installation/prerequisites-and-system-requirements.mdx
+++ b/getting-started/setup-and-installation/prerequisites-and-system-requirements.mdx
@@ -1,167 +1,216 @@
 ---
 title: "Prerequisites and System Requirements"
-description: "Understand the minimum requirements to run GoogleTest, including supported C++ standards, platforms, and compilers. This page helps ensure your environment is compatible and ready for installation."
+description: "Understand the minimum compiler, platform, and C++ standard requirements necessary to use GoogleTest and GoogleMock. Ensures your system is compatible and ready for development."
 ---
 
 # Prerequisites and System Requirements
 
-Ensure your development environment meets the minimum standards required to build and run GoogleTest and GoogleMock (gMock) seamlessly. This section guides you through supported platforms, necessary compiler standards, and environmental configurations to establish a solid foundation before installation.
+Ensure your development environment meets the minimum compiler, platform, and C++ standard requirements to successfully use GoogleTest and GoogleMock. This page guides you through the essential compatibility checks and environmental settings so you can set up and start authoring reliable tests with confidence.
 
 ---
 
-## 1. Supported Platforms and Environments
+## 1. Supported Platforms and OS
 
-GoogleTest and GoogleMock operate reliably across major operating systems and development environments:
+GoogleTest supports a wide range of operating systems and platforms aligned with Google's Foundational C++ Support Policy. Confirm that your platform is compatible before proceeding.
 
-- **Linux:** Fully supported with GCC, Clang, and other modern compilers.
-- **Windows:** Supported with Microsoft Visual Studio tools.
-- **Mac OS X:** Supported with Xcode and compatible compilers.
+**Supported Operating Systems include:**
 
-Refer to [Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md) for a detailed matrix of supported OS versions and compiler toolchains.
+- Linux (including Android)
+- Windows (Desktop, MinGW, Mobile variants)
+- macOS
+- BSD variations (FreeBSD, OpenBSD, NetBSD)
+- Solaris
+- Other Unix-like platforms (AIX, HP-UX, DragonFlyBSD, Haiku)
 
-### Important Notes
-
-- GoogleTest follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support). Ensure your platform adheres to this policy.
-- Multi-threaded tests require pthread library support; verify your platform provides it or can simulate it.
-
----
-
-## 2. Compiler and C++ Standard Requirements
-
-GoogleTest requires a C++17-compliant compiler. Confirm the following before proceeding:
-
-- **C++ Standard:** Minimum C++17 support is mandatory. If your build system requires explicit specification, set the standard accordingly.
-  - For CMake:  
-    ```cmake
-    set(CMAKE_CXX_STANDARD 17)
-    set(CMAKE_CXX_STANDARD_REQUIRED ON)
-    ```
-
-- **Compiler Compatibility:** Verified support exists for recent versions of GCC, Clang, MSVC, and Apple Clang.
-
-- **Threading Support:** For thread-safe tests, pthreads support is required (especially on Unix-like systems). Set the `-DGTEST_HAS_PTHREAD=1` flag if the detection fails.
-
-> Ensure your build flags and toolchain are consistent throughout your project to avoid linking or runtime issues.
-
----
-
-## 3. System Resources and Dependencies
-
-GoogleTest and gMock have minimal footprint but require the following:
-
-- **Memory:** At least 256 MB of RAM is recommended to build and run tests comfortably.
-
-- **Disk Space:** A few megabytes for source code and binaries. Ensure you have enough space for your project and test outputs.
-
-- **Build Tools:**
-  - C++17 compatible compiler
-  - CMake 3.14 or later if using the CMake build system
-  - Git for cloning repositories (optional but recommended)
-
-- **Network:** Internet connection required if downloading GoogleTest via CMake's FetchContent or git submodules.
-
----
-
-## 4. Access and Permissions
-
-- Sufficient permissions to install libraries or dependencies on your machine.
-- For Linux/macOS, ensure you can execute commands like `sudo make install` if performing system-wide installs.
-
----
-
-## 5. Tweaks and Control Macros
-
-GoogleTest can be customized with macros to tweak behavior or fix environment-specific issues.
-
-- Common macros:
-  - `-DGTEST_HAS_PTHREAD=1` or `-DGTEST_HAS_PTHREAD=0` to manually control threading support.
-  - `-DGTEST_CREATE_SHARED_LIBRARY=1` to build a shared library instead of static.
-  - `-DGTEST_LINKED_AS_SHARED_LIBRARY=1` to compile tests using the shared library.
-
-Consult the [googletest internal port header](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h) for the full list.
-
----
-
-## 6. Common Environment Pitfalls
-
-- **Compiler Flags:** Mismatched runtime library flags in Visual Studio can cause linker errors. Use the `gtest_force_shared_crt` CMake option to harmonize runtimes.
-
-- **C++ Standard Mismatch:** Confirm all components (GoogleTest, your code, dependencies) use the same C++ standard to avoid ABI issues.
-
-- **Threading:** Tests that use assertions in multi-threaded contexts require correct pthread detection and linkage.
-
-- **Permissions:** Insufficient permissions during install or file writing can cause cryptic failures.
-
----
-
-## 7. Verifying Your Environment
-
-Before proceeding to install and write tests, verify your system readiness:
-
-1. Run your compiler with `--version` or equivalent to confirm version and C++17 support.
-2. Test CMake version:
-
-   ```bash
-   cmake --version
-   ```
-
-3. Confirm pthread availability if on Unix/Linux:
-
-   ```bash
-   echo '#include <pthread.h>' | gcc -x c - -o /dev/null && echo 'pthread available' || echo 'pthread missing'
-   ```
-
-4. Check permissions for build and install directories.
-
----
-
-## 8. Next Steps
-
-Once your environment meets these prerequisites and system requirements, proceed to the next documentation page:
-
-- [Installation via CMake](/getting-started/setup-and-installation/installation-via-cmake)
-- [Installation via Bazel](/getting-started/setup-and-installation/installation-via-bazel)
-
-These guides will walk you through building and installing GoogleTest and GoogleMock on your platform.
-
-
----
-
-<Callout title="Tip" type="info">
-Keep your compiler and build tools up to date to leverage the latest features and fixes in GoogleTest and gMock.
-</Callout>
-
-<Callout title="Warning" type="warning">
-Attempting to build GoogleTest with unsupported compilers or without C++17 support will result in build failures or unstable tests.
-</Callout>
-
-<Callout title="Note" type="note">
-Visit the [GoogleTest official GitHub repository](https://github.com/google/googletest) for the latest updates, issues, and community support.
+<Callout>
+For a comprehensive and up-to-date list of supported platforms, refer to the [Supported Platforms documentation](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md).
 </Callout>
 
 ---
 
-## Appendix: Quick Reference Commands
+## 2. Compiler Requirements
 
-```bash
-# Check GCC version
-g++ --version
+GoogleTest requires a C++ compiler that supports at least the C++17 standard. This ensures all features and language constructs that GoogleTest depends on are available.
 
-# Check CMake version
-cmake --version
+### Minimum Compiler Versions (Indicative):
 
-# Verify pthread support on Linux/macOS
-echo '#include <pthread.h>' | gcc -x c - -o /dev/null && echo 'pthread available' || echo 'pthread missing'
-```
+| Compiler          | Minimum Version Supporting C++17 |
+|-------------------|----------------------------------|
+| GCC               | 7.0+                             |
+| Clang             | 5.0+                             |
+| MSVC (Visual Studio) | 2017 Update 3 (v19.11)+        |
+| Intel LLVM        | Versions supporting C++17        |
+
+
+<Note>
+GoogleTest enforces the use of the C++17 standard or later at compile time. Compilation will fail on older standard versions.
+</Note>
 
 ---
 
-## References
+## 3. C++ Standard
 
-- [Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md)
-- [Generic Build Instructions](https://github.com/google/googletest/blob/main/googletest/README.md)
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
-- [GoogleTest C++17 Compliance](https://github.com/google/googletest/blob/main/googletest/README.md#c-standard-version)
+- **C++ Standard Version:** GoogleTest requires **C++17** or later.
+- Ensure your build system explicitly sets the C++ language standard:
 
+  ```cmake
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
+  ```
+
+- If you cannot modify the project-wide settings (e.g., in a CMake project where GoogleTest is a subdirectory), you may alternatively append compiler flags manually:
+
+  ```bash
+  -std=c++17  # GCC/Clang
+  /std:c++17  # MSVC
+  ```
+
+---
+
+## 4. Threading Support
+
+GoogleTest is fully thread-safe on platforms where POSIX threads (`pthread`) are available or on Windows with native threading primitives.
+
+### Automatic Detection and Override:
+
+- GoogleTest auto-detects pthread availability.
+- If detection fails or platform uses a custom environment, set:
+
+  ```bash
+  -DGTEST_HAS_PTHREAD=1    # Enable pthread support
+  -DGTEST_HAS_PTHREAD=0    # Disable pthread support
+  ```
+
+- When using CMake, the pthread library is automatically linked if detected.
+
+<Tip>
+If you experience link errors related to pthread, verify that your build flags include `-pthread` or link against the pthread library explicitly.
+</Tip>
+
+---
+
+## 5. Build Tools and Environment
+
+GoogleTest comes with a CMake build script, which is the recommended and best-supported way to build the framework.
+
+### Required Tools:
+
+- [CMake](https://cmake.org/) version 3.14 or later
+- Compatible C++ compiler (see section above)
+- Supported native build system:
+  - GNU Make
+  - Ninja
+  - MSBuild / Visual Studio
+  - Xcode (macOS)
+
+### Installation of CMake:
+
+Refer to the official [CMake installation guide](https://cmake.org/install).
+
+<Note>
+CMake's FetchContent module (used in example projects and recommended workflows) requires CMake 3.14+.
+</Note>
+
+---
+
+## 6. Environment and Configuration Macros
+
+GoogleTest provides compiler macros to tweak its behavior and resolve environment-specific issues.
+
+### Commonly Used Macros:
+
+| Macro                          | Purpose                                      |
+|-------------------------------|----------------------------------------------|
+| `GTEST_CREATE_SHARED_LIBRARY`  | Compile GoogleTest as a shared library (DLL) |
+| `GTEST_LINKED_AS_SHARED_LIBRARY` | Compile test binaries to link with shared DLL |
+| `GTEST_HAS_PTHREAD`            | Explicitly enable/disable pthread detection    |
+| `GTEST_DONT_DEFINE_<MACRO>`   | Rename conflicting GoogleTest macros (e.g. `TEST`) |
+
+<Info>
+These macros are typically set in your build system's compiler flags to control GoogleTest's build and runtime behavior.
+</Info>
+
+---
+
+## 7. Practical Tips and Best Practices
+
+- Always verify that your compiler flags explicitly define C++17 support.
+- When mixing GoogleTest with your project, prefer building GoogleTest as part of your project using `add_subdirectory()` in CMake to ensure compatibility.
+- On Windows, pay special attention to the runtime linkage flags (`gtest_force_shared_crt`) to prevent conflicts between static and dynamic runtime linkage.
+
+<Tip>
+If using Visual Studio, enable `gtest_force_shared_crt` in your CMake to align the C runtime linkage with your project settings.
+</Tip>
+
+-------------------------------------------------------------------------------
+
+# Checklist for Prerequisites
+
+<Steps>
+<Step title="Verify Platform Compatibility">
+Confirm your OS is supported (Linux, Windows, Mac, BSD, etc.).
+</Step>
+<Step title="Check Compiler Version">
+Ensure your compiler is C++17 compatible and up to date.
+</Step>
+<Step title="Set C++ Standard in Build System">
+Configure your build system to use at least C++17.
+</Step>
+<Step title="Install Required Build Tools">
+Install CMake (version 3.14+), and compatible native build tools.
+</Step>
+<Step title="Confirm Threading Support">
+Ensure pthreads are properly supported or set relevant macros.
+</Step>
+<Step title="Define Environment Macros as Needed">
+Apply compiler flags to avoid macro conflicts or specify shared/static linkage.
+</Step>
+</Steps>
+
+---
+
+## Troubleshooting Common Prerequisite Issues
+
+### Problem: Compilation fails due to unsupported C++ standard
+
+**Solution:**
+- Confirm your compiler version supports C++17.
+- Add or update your build system's `-std=c++17` flag or equivalent.
+
+### Problem: Link errors related to pthread
+
+**Solution:**
+- Add `-pthread` flag to compiler and linker options.
+- For CMake, ensure `find_package(Threads)` succeeds and links pthread.
+
+### Problem: Runtime issues with mismatched CRT on Windows
+
+**Solution:**
+- Enable `gtest_force_shared_crt` in CMake to ensure consistent runtime linkage.
+
+<Tip>
+Always consult the [Installation on Linux, macOS, and Windows](../installation-on-linux-macos-windows.md) page next for platform-specific installation instructions.
+</Tip>
+
+---
+
+## Next Steps
+
+After confirming your system meets these prerequisites:
+
+- Proceed to the [Installation on Linux, macOS, and Windows](../installation-on-linux-macos-windows.md) page to learn how to build and install GoogleTest.
+- Explore [Configuring Your Project](../configuring-your-project.md) to integrate GoogleTest into your development workflow.
+
+For a practical introduction to writing tests, see [Writing Your First Test](../../first-test-and-validation/writing-your-first-test.md).
+
+---
+
+## References and Further Reading
+
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [Platform Support Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
+- [CMake Documentation](https://cmake.org/documentation/)
+- [GoogleTest Primer](../../overview/core_fundamentals/core_concepts.md)
+- [Build Instructions](../../googletest/README.md)
 
 ---
