--- a/guides/getting-started/writing-your-first-test.mdx
+++ b/guides/getting-started/writing-your-first-test.mdx
@@ -1,75 +1,72 @@
 ---
 title: "Writing Your First Test"
-description: "Guides users through authoring, compiling, and running their first test case using the GoogleTest framework. Illustrates core test macros, test discovery, and how to interpret test output, empowering users to validate basic code behavior immediately."
+description: "Follow a hands-on walkthrough to create and run your first test using GoogleTest. Learn the essentials of defining a test case, employing assertion macros, and interpreting test results. This guide ensures a quick win for users new to the framework."
 ---
 
 # Writing Your First Test
 
-## Introduction
-
-Welcome to the essential first step on your journey with GoogleTest. This guide empowers you to write, compile, and run your first test case effectively, providing you with immediate confidence that your code behaves as expected.
-
-GoogleTest helps you quickly validate your C++ code by enabling you to write simple tests with clear assertions. Through this guide, you’ll learn the core macros used to define tests, how to structure them, and how to interpret the results. 
-
-By the end, you will have a working test executable that runs your test suite and reports success or failure clearly and concisely.
+Welcome to your foundational journey with GoogleTest! This guide takes you through a practical, step-by-step process to create and run your first C++ test using the GoogleTest framework. You'll learn how to define a test case, apply assertion macros effectively, and interpret the output to verify your results. By the end, you will have a working test and a solid grasp of essential testing concepts.
 
 ---
 
-## Prerequisites
+## 1. Understanding the Test Workflow
 
-Before you begin, make sure you have:
+### Task Description
+This guide helps you write your first test case in GoogleTest, understand the test structure, and verify that your test behaves as expected.
 
-- Built and linked GoogleTest and GoogleMock libraries correctly in your project.
-- Included the relevant headers (`gtest/gtest.h`) in your source file.
-- A C++17-compliant compiler configured for your environment.
-- A preferred build system (e.g., CMake, Bazel, or Make) set up with the necessary flags to compile and link GoogleTest.
+### Prerequisites
+- GoogleTest must be installed and configured in your C++ project.
+- Basic familiarity with C++ programming.
+- A working build environment with a compiler supporting C++17 or later.
 
-If you haven't completed this, please refer to the [Setup & Installation guides](../../getting-started/setup-prerequisites-installation/configuration-and-initial-setup) first.
+### Expected Outcome
+By following this guide, you will have a compiled and runnable test suite that:
+- Defines a test case and test.
+- Uses assertion macros to validate conditions.
+- Runs tests and produces meaningful output.
+
+### Time Estimate
+Approximately 15-20 minutes.
+
+### Difficulty Level
+Beginner
 
 ---
 
-## Creating Your First Test
+## 2. Creating Your First Test
 
-GoogleTest uses macros to define tests, which consist of test suites (collections of related tests) and test cases (individual tests). This structure encourages well-organized, maintainable test code.
+GoogleTest organizes tests within *test suites*. Each suite can contain multiple tests. Each test verifies a specific behavior or condition.
 
-### Step 1: Include GoogleTest Header
-
-Add the GoogleTest header to your test source file.
+### Step 1: Include the GoogleTest Header
+Make sure your test source file includes the main GoogleTest header.
 
 ```cpp
 #include <gtest/gtest.h>
 ```
 
-This inclusion gives you access to all testing macros and functionalities.
+### Step 2: Write a Simple Test Using `TEST`
+Use the `TEST(TestSuiteName, TestName)` macro to define a test. Both names should be valid C++ identifiers without underscores.
 
-### Step 2: Define a Test Case
-
-Use the `TEST` macro to define a simple test case. The syntax is:
+Here is a simplistic example that tests `Factorial` returns 1 for input 0:
 
 ```cpp
-TEST(TestSuiteName, TestName) {
-  ... // test code and assertions
+// Define the function under test
+int Factorial(int n) {
+  return (n <= 1) ? 1 : n * Factorial(n - 1);
 }
-```
 
-- `TestSuiteName`: Groups related tests. Use a descriptive name reflecting the feature or class you’re testing.
-- `TestName`: Describes what this particular test verifies.
-
-### Example: Testing a Factorial Function
-
-Suppose you have a function:
-
-```cpp
-int Factorial(int n);
-```
-
-Define tests for this function as follows:
-
-```cpp
+// Define a test case
 TEST(FactorialTest, HandlesZeroInput) {
   EXPECT_EQ(Factorial(0), 1);
 }
+```
 
+*Explanation:* This test suite is called `FactorialTest`, with a single test named `HandlesZeroInput`. The test asserts that `Factorial(0)` equals 1.
+
+### Step 3: Add More Tests
+You can add more tests in the same suite by repeating the `TEST` macro:
+
+```cpp
 TEST(FactorialTest, HandlesPositiveInput) {
   EXPECT_EQ(Factorial(1), 1);
   EXPECT_EQ(Factorial(2), 2);
@@ -78,30 +75,35 @@ TEST(FactorialTest, HandlesPositiveInput) {
 }
 ```
 
-Notice that each `TEST` defines a distinct behavior to validate. Here, the test suite is `FactorialTest` and we have two test cases inside it.
+*Tip:* Grouping related tests in the same suite improves organization and readability.
 
-### Step 3: Build Your Test Executable
+---
 
-Compile your test code along with GoogleTest and GoogleMock libraries. For example, using g++:
+## 3. Compiling and Running Your Tests
 
-```bash
-g++ -std=c++17 -isystem /path/to/googletest/include -L/path/to/googletest/lib your_test.cc -lgtest -lgmock -pthread -o your_test
-```
+### Step 1: Compile Your Test
+Make sure to link against GoogleTest libraries (`gtest` and `gtest_main` or `gmock` if using mocks).
 
-Make sure to replace `/path/to/googletest` with your actual installation path.
-
-### Step 4: Run Your Tests
-
-Execute your test binary:
+Example compilation command with `g++`:
 
 ```bash
-./your_test
+g++ -std=c++17 -isystem /path/to/googletest/include -pthread \
+    your_test_file.cc /path/to/googletest/lib/libgtest.a /path/to/googletest/lib/libgtest_main.a \
+    -o your_test_binary
 ```
 
-You will see output similar to:
+Replace `/path/to/googletest` with the actual installation path.
+
+### Step 2: Run Your Test Binary
+Executing your test binary runs all defined tests.
+
+```bash
+./your_test_binary
+```
+
+You should see output similar to:
 
 ```
-Running main() from gmock_main.cc
 [==========] Running 2 tests from 1 test suite.
 [----------] Global test environment set-up.
 [----------] 2 tests from FactorialTest
@@ -110,110 +112,115 @@ Running main() from gmock_main.cc
 [ RUN      ] FactorialTest.HandlesPositiveInput
 [       OK ] FactorialTest.HandlesPositiveInput (0 ms)
 [----------] 2 tests from FactorialTest (0 ms total)
-
 [----------] Global test environment tear-down
 [==========] 2 tests from 1 test suite ran. (0 ms total)
 [  PASSED  ] 2 tests.
 ```
 
-### Understanding the Output
-
-- `RUN`: Indicates which test is currently running.
-- `OK`: Indicates the test passed.
-- Summary at the end shows the total number of tests and how many passed or failed.
+This confirms that your tests passed.
 
 ---
 
-## Assertions
+## 4. Understanding Assertion Macros
 
-Inside your tests, you assert expectations about code behavior. GoogleTest provides two types:
+GoogleTest offers various assertion macros. The two primary types are:
 
-- `ASSERT_*`: Fatal failures that abort the current test case immediately upon failure.
-- `EXPECT_*`: Non-fatal failures that allow the test to continue and report all failures.
+- `EXPECT_*` (non-fatal): Reports failure but continues running the test.
+- `ASSERT_*` (fatal): Reports failure and aborts the current test immediately.
 
-Example assertions:
+### Basic Assertion Examples
+
+- Equality check:
+
+  ```cpp
+  EXPECT_EQ(expected, actual);
+  ASSERT_NE(pointer, nullptr);
+  ```
+
+- Boolean checks:
+
+  ```cpp
+  EXPECT_TRUE(condition);
+  ASSERT_FALSE(condition);
+  ```
+
+- String comparison:
+
+  ```cpp
+  EXPECT_STREQ(c_string1, c_string2);
+  ```
+
+### When to use What
+- Use `ASSERT_*` when failure makes continuing the test meaningless or likely to cause crashes.
+- Use `EXPECT_*` for checks where further assertions are still valuable even after failure.
+
+### Custom Messages
+You can append a message to assertions:
 
 ```cpp
-EXPECT_EQ(actual, expected);      // Checks equality
-ASSERT_TRUE(condition);           // Checks a boolean condition
-EXPECT_NE(value1, value2);        // Checks inequality
+EXPECT_EQ(Factorial(0), 1) << "Factorial of zero should be 1";
 ```
 
-Use `EXPECT_*` when you want to continue testing even if something fails, and `ASSERT_*` when continuation doesn’t make sense (e.g., invalid pointers).
-
 ---
 
-## Writing Tests with Fixtures (Optional Next Step)
+## 5. Test Naming Best Practices
 
-If you want to share setup and teardown code among multiple tests, consider using test fixtures. This will be covered in detail in the [Test Fixtures guide](/api-reference/core-testing-api/test-fixtures-api).
+- Test suite and test names should **not** contain underscores (`_`).
+- Use descriptive names reflecting the functionality or condition tested.
 
----
-
-## Troubleshooting
-
-### Common Issues
-
-- **Tests don’t run or show zero tests**: Check you linked against `gtest_main` or provided your own `main()`.
-- **Compilation errors**: Verify your include paths and C++17 standard flag.
-- **Tests fail unexpectedly**: Read output carefully; GoogleTest indicates what assertion failed and where.
-
-### Tips
-
-- Run tests with `--gtest_list_tests` to list all available tests.
-- Use `--gtest_filter` to run specific tests.
-- If debugging, run with `--gtest_break_on_failure` to pause on failures.
-
----
-
-## Summary
-
-You've now learned how to:
-
-- Write simple test cases using the `TEST` macro.
-- Use basic assertions to validate behavior.
-- Compile and run your test executables.
-- Interpret GoogleTest output.
-
-Congratulations! You are ready to write and run your first tests that validate your code correctness.
-
-Next, consider exploring more complex testing scenarios using [test fixtures](../api-reference/core-testing-api/test-fixtures-api) or dive into mocking dependencies with GoogleMock using the [gMock Cookbook](../docs/gmock_cook_book.md).
-
----
-
-## References & Further Reading
-
-- [GoogleTest Primer](../docs/primer.md) for foundational concepts.
-- [GoogleMock for Dummies](../docs/gmock_for_dummies.md) to begin mocking.
-- [Using Assertions Reference](../api-reference/core-testing-api/assertions-api) for detailed assertion macros.
-- [Writing Custom Test Fixtures](../api-reference/core-testing-api/test-fixtures-api).
-- [Guide: Mocking Patterns and Best Practices](/guides/testing-patterns/mocking-best-practices).
-
----
-
-## Example: Full Minimal Test File
+Example:
 
 ```cpp
-#include <gtest/gtest.h>
-
-int Factorial(int n) {
-  return n <= 1 ? 1 : n * Factorial(n - 1);
-}
-
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(8), 40320);
-}
-
-int main(int argc, char** argv) {
-  testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
+TEST(StringUtilsTest, ConvertsToUppercaseCorrectly) { ... }
 ```
 
-Compile and run this file as described in Step 3 and Step 4.
+This makes test reports easier to read and reduces potential conflicts.
+
+---
+
+## 6. Troubleshooting Common Issues
+
+### Issue: Compiler Error About Missing Default Constructor
+GoogleTest requires the test fixture or test suite class to have a default constructor. If you define custom constructors, ensure to provide a default one.
+
+### Issue: Assertions Not Triggering Failures
+Ensure you include the correct GoogleTest headers and that assertions are inside a `TEST` or `TEST_F` body.
+
+### Debugging Failed Tests
+Run the tests with verbose output:
+
+```bash
+./your_test_binary --gtest_verbose=info
+```
+
+This shows detailed matching and call logs.
+
+---
+
+## 7. Next Steps
+
+- Read the [GoogleTest Primer](../primer.md) to deepen your understanding.
+- Explore the [Essential Assertions and Test Patterns](essential-assertions-and-patterns.md) guide.
+- Learn to write parameterized tests for varied inputs ([Writing Parameterized Tests](writing-parameterized-tests.md)).
+- Explore mocking techniques using GoogleMock with [Using Mocks in Unit Tests](using-mocks-in-unit-tests.md).
+
+---
+
+## References
+- [GoogleTest Primer](../primer.md)
+- [Assertions Reference](../reference/assertions.md)
+- [Mocking Cookbook (gMock)](gmock_cook_book.md)
+- [Test Case and Suite Definition](../api-reference/core-testing-api/test-case-definition.md)
+- [GoogleTest FAQ](../faq.md)
+- Official repository: [https://github.com/google/googletest](https://github.com/google/googletest)
+
+
+<Callout title='Tip'>
+To keep your tests clean and maintainable, write one assertion per test when possible. This aids in isolating issues during failures.
+</Callout>
+
+<Callout title='Note'>
+Running `RUN_ALL_TESTS()` returns 0 if all tests pass. Make sure your `main()` returns this value to properly signal test results to your CI or test runner.
+</Callout>
+
+---
